# xTools

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  config.rs  lib.rs  main.rs  main_cli.rs  serial.rs
