[package]
name = "xtools"
version = "0.1.0"
description = "xTools - 跨平台超级工具集"
authors = ["you"]
edition = "2021"
default-run = "xtools"

[lib]
name = "xtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "xtools"
path = "src/main.rs"

[[bin]]
name = "xtools_cli"
path = "src/main_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
once_cell = "1"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
dirs = "5"
ctrlc = "3"
rustyline = "13"

